--- a/src/main/resources/templates/article/detail.html
+++ b/src/main/resources/templates/article/detail.html
@@ -1,3 +1,12 @@
-게시물 상세페이지
-<br />
-[[${@rq.currentUrl}]]
+<!DOCTYPE html>
+<html layout:decorate="~{/layout/layout}">
+
+<head>
+    <title>사이트A - 게시물 상세페이지</title>
+</head>
+
+<main layout:fragment="main">
+    <h1>게시물 상세페이지</h1>
+</main>
+
+</html>
